add_executable(point_cloud_example point_cloud_example.cc)
target_link_libraries(point_cloud_example slam_viewer)

add_executable(trajectory_example trajectory_example.cc)
target_link_libraries(trajectory_example slam_viewer)

add_executable(coordinate_example coordinate_example.cc)
target_link_libraries(coordinate_example slam_viewer)

add_executable(frame_example frame_example.cc)
target_link_libraries(frame_example slam_viewer)

add_executable(plotter_example plotter_example.cc)
target_link_libraries(plotter_example slam_viewer)

add_executable(image_shower_example image_shower_example.cc)
target_link_libraries(image_shower_example slam_viewer)

add_executable(box_example box_example.cc)
target_link_libraries(box_example slam_viewer)

add_executable(kitti_dataset_example kitti_dataset_example.cc KittiHelper/KittiHelper.cc)
target_link_libraries(kitti_dataset_example slam_viewer)
target_include_directories(kitti_dataset_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/KittiHelper)



# add_executable(text_test text_test.cc)
# target_link_libraries(text_test slam_viewer)